A small correction on the midi page. The top button icons and other fields are vertically aligned.

--- a/webpage/dighere.css
+++ b/webpage/dighere.css
@@ -45,7 +45,10 @@ svg {
 
 .infoBar img {
     margin: 2px;
-    vertical-align: bottom;
+}
+
+.infoBar * {
+    vertical-align: middle;
 }
 
 .hideOverflow {
